=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.22

=over

=item *

Fixed bug where "Show Thumbnails" checkbox would become unchecked
on "Find Media" screen when a search was done. [Michael Peters]

=item *

Changed dates on messages about scheduled publishes to be a more user
friendly format [Michael Peters]

=item *

Added "Steal" capability to "Active Templates" screen. [Michael Peters]

=item *

Added "Steal" capability to "Active Media" screen. [Michael Peters]

=item *

Fixed bug where stealing stories from deleted users would result in an
ISE [Michael Peters]

=item *

Fixed bug where changing elements' classes and order at the same
time on Edit Story screens would garble data. [Michael Peters]

=item *

"Cancel" on edit screens is now multi-window friendly when editing
multiple objects in multiple screens. [Michael Peters]

=item *

Added "View Details" command to workspace screen. [Michael Peters]

=item *

Fixed Workspace sorting to work like normal krang pager style sortable
tables. [Michael Peters]

=back

=head2 3.21 - August 10th, 2012

=over

=item *

Added tags to stories for classification and searching. [Michael Peters]

=item *

Added tags to media for classification and searching. [Michael Peters]

=item *

New categories created with Media Bulk Upload will now have spaces
replaced by underscores to be consisten with how we also handle
filenames. [Michael Peters]

=item *

Consistently show the user's display name (first and last if we have
it) instead of login on different screens that refer to users by
name. [Michael Peters]

=item *

Fixed bug where a user being in a group with admin_user_limited perms
would be given full admin_user access if they were in another group
with neither admin_user nor admin_user_limited perms. [Brad Oaks]

=item *

Fixed bug where New Template -> Save & Stay would hang and not
complete. [Michael Peters]

=item *
