@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Added "Search Full Text?" checkbox on "Find Media" screen just like the
+one on "Find Stories" screen. [Michael Peters]
+
+=item *
+
 Fixed bug where "Show Thumbnails" checkbox would become unchecked
 on "Find Media" screen when a search was done. [Michael Peters]
 
